--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
-*{
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,300;0,500;0,700;0,900;0,400&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    body {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+    }
+
+    h1,
+    h2 {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+    }
+    label{
+        @apply text-small text-zinc-500 px-3
+    }
+    select{
+        @apply border-2 border-zinc-400 rounded-lg h-10 text-normal px-2 focus:border-red-500 hover:border-red-500
+    }
+    option{
+        @apply py-4
+    }
+}
+
+@layer components{
+    .wapper{
+
+        @apply mt-5 flex flex-col w-8/12 mx-auto
+    }
 }
