--- a/src/index.css
+++ b/src/index.css
@@ -10,19 +10,18 @@
         font-weight: 400;
     }
 
-    h1,
-    h2 {
+    h1 {
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
     }
     label{
-        @apply text-small text-zinc-500 px-3
+        @apply text-small text-zinc-500 px-3 text-third
     }
     select{
-        @apply border-2 border-zinc-400 rounded-lg h-10 text-normal px-2 focus:border-red-500 hover:border-red-500
+        @apply border-2 border-zinc-400 rounded-lg h-10 text-normal px-2 focus:border-third hover:border-third
     }
     option{
-        @apply py-4
+        @apply hover:bg-primary hover:text-white
     }
 }
 
