--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
         @apply text-small text-zinc-500 px-3 text-third
     }
     select{
-        @apply border-2 border-zinc-400 rounded-lg h-10 text-normal px-2 focus:border-third hover:border-third
+        @apply border-2 border-zinc-400 rounded-lg h-10 text-normal px-0 mobile:px-2 focus:border-third hover:border-third
     }
     option{
         @apply hover:bg-primary hover:text-white
@@ -27,10 +27,10 @@
 
 @layer components{
     .wapper{
-        @apply mt-5 flex flex-col w-8/12 mx-auto
+        @apply mt-2 flex flex-col  mx-auto w-full mobile:w-8/12 mobile:mt-5
     }
     .row{
-        @apply bg-white m-2 p-4 rounded text-xl text-zinc-500
+        @apply bg-white text-zinc-500  rounded p-2 m-2 mobile:m-2 mobile:p-4 text-xl 
     }
     .tag{
         @apply text-small leading-small bg-slate-600 p-2 mx-2 text-white rounded-full
